Fixed a single device showing as squished and fixed toast prop types.

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -37,25 +37,6 @@ h1 {
   }
 }
 
-.card {
-  border: 1px solid #262a2b;
-  border-radius: 4px;
-  padding: 15px;
-  margin-bottom: 20px;
-  background-color: #1b1e1f;
-}
-
-.card-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.card-title {
-  margin: 0;
-  font-size: 1.2rem;
-}
 
 .connected,
 .connected p {
